--- a/_includes/base.html
+++ b/_includes/base.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="{{ '/styles/tailwind.css' | url }}">
-        <link rel="stylesheet" href="{{ '/styles/main.css' | url }}">
+        <!-- <link rel="stylesheet" href="{{ '/styles/main.css' | url }}"> -->
     </head>
-    <body>
+    <body class = " overflow-hidden leading-6">
         {{ content }}
     </body>
 </html>
