commented out just in case

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -6,7 +6,8 @@
 @layer components {
 
     .custom-tailwind {
-        @apply text-white bg-blue-500
+        /* @apply text-white bg-blue-500 */
+        
     }
 
 }
